# politiquices-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  api-reverse-proxy.py  cache.py  config.py  data_models.py  generate_caches.py  main.py  mypy.ini  pylint.cfg  pyproject.toml  qa_neural_search.py  requirements.txt  setup.cfg  sparql_queries.py  start_docker.sh  utils.py
.github/workflows/: code_checks.yml  main.yml
json/: all_entities_info.json  all_parties_info.json  parties.json  person_relationships_counts.json  persons.json  top_co_occurrences.json
politiquices_api/: cache.py  config.py  data_models.py  generate_caches.py  main.py  sparql_queries.py  utils.py
src/: annotation_router.py  cache.py  config.py  data_models.py  generate_caches.py  main.py  qa_neural_search.py  sparql.py  sparql_prefixes.py  sparql_queries_cache.py  utils.py
tests/: test_generate_caches.py
