[tool.poetry]
name = "politiquices-api"
version = "0.1.0"
description = ""
authors = ["David S. Batista <dsbatista@gmail.com>"]
readme = "README.md"
packages = [{include = "politiquices_api"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
